Added live orderbook for crypto assets

--- a/alpaca/BUILD
+++ b/alpaca/BUILD
@@ -17,6 +17,7 @@ cc_library(
         "portfolio.h",
         "position.h",
         "quote.h",
+        "orderbook.h",
         "status.h",
         "streaming.h",
         "trade.h",
@@ -34,6 +35,7 @@ cc_library(
         "portfolio.cpp",
         "position.cpp",
         "quote.cpp",
+        "orderbook.cpp",
         "status.cpp",
         "streaming.cpp",
         "trade.cpp",
